@@ -27,7 +27,7 @@ exec-once = hypridle
 exec-once = wl-paste --watch cliphist store
 
 # Initialize swww
-exec-once = swww-daemon --format xrgb
+exec-once = swww init || swww-daemon --format xrgb
 
 # Load last wallpaper and waybar with pywal colors
 exec-once = ~/dotfiles/hypr/scripts/wallpaper.sh init
