@@ -36,6 +36,7 @@ case $1 in
 
     # Load wallpaper from .cache of last session 
     "init")
+        sleep 1
         if [ -f $cache_file ]; then
             wal -q -i $current_wallpaper
         else
@@ -94,16 +95,29 @@ swww img $wallpaper \
     --transition-duration=0.7 \
     --transition-pos "$( hyprctl cursorpos )"
 
+if [ "$1" == "init" ] ;then
+    echo ":: Init"
+else
+    sleep 1
+    dunstify "Changing wallpaper ..." "with image $newwall" -h int:value:33 -h string:x-dunst-stack-tag:wallpaper
+    sleep 2
+fi
+
 # ----------------------------------------------------- 
 # Created blurred wallpaper
 # -----------------------------------------------------
+if [ "$1" == "init" ] ;then
+    echo ":: Init"
+else
+    dunstify "Creating blurred version ..." "with image $newwall" -h int:value:66 -h string:x-dunst-stack-tag:wallpaper
+fi
+
 magick $wallpaper -resize 75% $blurred
 echo ":: Resized to 75%"
 if [ ! "$blur" == "0x0" ] ;then
     magick $blurred -blur $blur $blurred
     echo ":: Blurred"
 fi
-
 
 # ----------------------------------------------------- 
 # Write selected wallpaper into .cache files
@@ -118,7 +132,7 @@ echo "* { current-image: url(\"$blurred\", height); }" > "$rasi_file"
 if [ "$1" == "init" ] ;then
     echo ":: Init"
 else
-    notify-send "Colors and Wallpaper updated" "with image $newwall"
+    dunstify "Wallpaper procedure complete!" "with image $newwall" -h int:value:100 -h string:x-dunst-stack-tag:wallpaper
 fi
 
 echo "DONE!"
