@@ -3,6 +3,7 @@ https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.8.3.4
 --------------------------------------------------------
 - Fix swww gray backgroud issue. New command on autostart.conf is exec-once = swww-daemon --format xrgb
 - Using blurred version of background image for wlogout
+- Add progress bar to dunst notification for wallpaper change
 
 Version 2.8.3.3
 https://gitlab.com/stephan-raabe/dotfiles/-/releases/2.8.3.3
